<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_black_gradien">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView_Back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/back"
            android:padding="15dp"
            android:src="@drawable/ic_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/xac_thuc_tai_khoan"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="Nhập mã xác nhận"
        android:textColor="@color/gray"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout1" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10">

        <EditText
            android:id="@+id/editText_Code1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:importantForAutofill="yes"
            android:background="@drawable/background_while_no_solid_boder"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1" />

        <EditText
            android:id="@+id/editText_Code2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:background="@drawable/background_while_no_solid_boder"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1" />

        <EditText
            android:id="@+id/editText_Code3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:background="@drawable/background_while_no_solid_boder"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1" />

        <EditText
            android:id="@+id/editText_Code4"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:background="@drawable/background_while_no_solid_boder"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1" />

        <EditText
            android:id="@+id/editText_Code5"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:background="@drawable/background_while_no_solid_boder"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1" />

        <EditText
            android:id="@+id/editText_Code6"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:background="@drawable/background_while_no_solid_boder"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text='Nhấn "Xác thực" để tiến hành xác thực tài khoản đăng nhập vào ứng dụng DuyNguyen Hair Salon'
        android:textColor="@color/gray"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <Button
        android:id="@+id/button_Confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:enabled="false"
        android:textColor="@color/black"
        android:text="Xác thực"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_Confirm">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Không nhận được mã OTP?"
            android:textColor="@color/gray" />

        <TextView
            android:id="@+id/textView_ReSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gui_lai"
            android:textAllCaps="false"
            android:enabled="false"
            android:textColor="@color/gray"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>